--- a/bigday/templates/partials/footer.html
+++ b/bigday/templates/partials/footer.html
@@ -1,3 +1,3 @@
-<div id="footer" class="text-center text-muted invisible"><a href="http://rowena-and.coryzue.com">http://rowena-and.coryzue.com</a> designed
+<div id="footer" class="text-center text-muted invisible"><a href="{{ site_url }}">{{ site_url }}</a> designed
     and built by Cory and Ro.
 </div>
